# monopoly-experiment-2

./: LICENSE  README.md  electron-builder.config.cjs  index.html  package-lock.json  package.json  pyproject.toml  script.js  styles.css
.github/workflows/: build-windows-installer.yml  deploy-pages.yml
docs/aurora/: README.md  ROADMAP.md  TECH_STACK.md
electron/: main.js  preload.js
python_app/: app.py
scripts/: qa-check.mjs
